--- a/app/src/main/res/layout/activity_entermobileno.xml
+++ b/app/src/main/res/layout/activity_entermobileno.xml
@@ -62,6 +62,7 @@
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
+           android:background="@drawable/backgroud_box"
            android:gravity="center"
            android:orientation="horizontal"
 
@@ -92,6 +93,15 @@
 
 
        </LinearLayout>
+       
+       <Button
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_margin="30dp"
+           android:text="Get OTP"
+           android:textColor="@color/black"
+           android:textStyle="bold"
+           android:background="@color/colorPrimary"
 
        
        
