OTP verification layout added

--- a/app/src/main/res/layout/activity_entermobileno.xml
+++ b/app/src/main/res/layout/activity_entermobileno.xml
@@ -101,7 +101,8 @@
            android:text="Get OTP"
            android:textColor="@color/black"
            android:textStyle="bold"
-           android:background="@color/colorPrimary"
+           android:background="@drawable/background_buttonn"
+           />
 
        
        
