--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -4,6 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
+    android:overScrollMode="never"
+
+    android:background="#21FFC107"
     tools:context=".VerificationActivity">
 
 
@@ -31,8 +35,189 @@
         android:textStyle="bold"
         />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:gravity="center"
+            android:textColor="@color/colortextsecond"
+            android:textSize="14sp"
+
+            android:text="Enter otp recieved"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:id="@+id/textMobileShow"
+            android:textColor="@color/colortextsecond"
+            android:textSize="14sp"
+
+            />
+
+
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="30dp"
+    android:gravity="center"
+    android:orientation="horizontal"
+    >
+
+<EditText
+    android:layout_width="40dp"
+    android:layout_height="46dp"
+    android:id="@+id/inputOTP1"
+    android:imeOptions="actionNext"
+    android:importantForAutofill="no"
+    android:inputType="number"
+    android:maxLength="1"
+    android:textColor="@color/black"
+    android:textSize="24sp"
+    android:textStyle="bold"
+    tools:ignore="LabelFor"
+
+    android:background="@drawable/backgroud_box"/>
+    <EditText
+        android:layout_width="40dp"
+        android:layout_height="46dp"
+        android:id="@+id/inputOTP2"
+        android:layout_marginStart="4dp"
+        android:imeOptions="actionNext"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:maxLength="1"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:ignore="LabelFor"
+
+        android:background="@drawable/backgroud_box"/>
+    <EditText
+        android:layout_width="40dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="4dp"
+
+        android:id="@+id/inputOTP3"
+        android:imeOptions="actionNext"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:maxLength="1"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:ignore="LabelFor"
+
+        android:background="@drawable/backgroud_box"/>
+    <EditText
+        android:layout_width="40dp"
+        android:layout_height="46dp"
+        android:id="@+id/inputOTP4"
+        android:layout_marginStart="4dp"
+
+        android:imeOptions="actionNext"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:maxLength="1"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:ignore="LabelFor"
+
+        android:background="@drawable/backgroud_box"/>
+    <EditText
+        android:layout_width="40dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="4dp"
+
+        android:id="@+id/inputOTP5"
+        android:imeOptions="actionNext"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:maxLength="1"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:ignore="LabelFor"
+
+        android:background="@drawable/backgroud_box"/>
+    <EditText
+        android:layout_width="40dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="4dp"
+
+        android:id="@+id/inputOTP6"
+        android:imeOptions="actionNext"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:maxLength="1"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:ignore="LabelFor"
+
+        android:background="@drawable/backgroud_box"/>
+
+</LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Did'nt recieved the code"
+                android:textColor="@color/colortextsecond"
+                android:textSize="14sp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/resend_otp"
+                android:text="Resend Otp"
+                android:layout_marginStart="8dp"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+
+
+
+
+
+
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:text="Submit"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:background="@drawable/background_buttonn"
+            />
+
+
+
 
     </LinearLayout>
+
+
+
+
 
 
 </ScrollView>
