--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -44,7 +44,7 @@
             android:textColor="@color/colortextsecond"
             android:textSize="14sp"
 
-            android:text="Enter otp recieved"
+            android:text="Enter otp recieved on "
             />
 
         <TextView
@@ -78,6 +78,7 @@
     android:importantForAutofill="no"
     android:inputType="number"
     android:maxLength="1"
+    android:gravity="center"
     android:textColor="@color/black"
     android:textSize="24sp"
     android:textStyle="bold"
@@ -87,6 +88,8 @@
     <EditText
         android:layout_width="40dp"
         android:layout_height="46dp"
+        android:gravity="center"
+
         android:id="@+id/inputOTP2"
         android:layout_marginStart="4dp"
         android:imeOptions="actionNext"
@@ -103,6 +106,7 @@
         android:layout_width="40dp"
         android:layout_height="46dp"
         android:layout_marginStart="4dp"
+        android:gravity="center"
 
         android:id="@+id/inputOTP3"
         android:imeOptions="actionNext"
@@ -120,6 +124,7 @@
         android:layout_height="46dp"
         android:id="@+id/inputOTP4"
         android:layout_marginStart="4dp"
+        android:gravity="center"
 
         android:imeOptions="actionNext"
         android:importantForAutofill="no"
@@ -135,6 +140,7 @@
         android:layout_width="40dp"
         android:layout_height="46dp"
         android:layout_marginStart="4dp"
+        android:gravity="center"
 
         android:id="@+id/inputOTP5"
         android:imeOptions="actionNext"
@@ -151,6 +157,7 @@
         android:layout_width="40dp"
         android:layout_height="46dp"
         android:layout_marginStart="4dp"
+        android:gravity="center"
 
         android:id="@+id/inputOTP6"
         android:imeOptions="actionNext"
@@ -205,6 +212,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
             android:text="Submit"
+            android:id="@+id/submitButton"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:background="@drawable/background_buttonn"
