--- a/app/src/main/res/layout/activity_entermobileno.xml
+++ b/app/src/main/res/layout/activity_entermobileno.xml
@@ -98,6 +98,11 @@
 
        </LinearLayout>
 
+       <FrameLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           >
+
        <Button
            android:id="@+id/getotp"
            android:layout_width="match_parent"
@@ -108,8 +113,19 @@
            android:textColor="@color/black"
            android:textStyle="bold" />
 
-       
-       
+
+           <ProgressBar
+               android:layout_width="35dp"
+               android:layout_height="35dp"
+               android:layout_gravity="center"
+               android:id="@+id/progressbar_sendotp"
+               android:visibility="gone"/>
+
+       </FrameLayout>
+
+
+
+
    </LinearLayout>
 
 </ScrollView>
