--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -207,16 +207,29 @@
 
         </LinearLayout>
 
-        <Button
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="30dp"
-            android:text="Submit"
-            android:id="@+id/submitButton"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:background="@drawable/background_buttonn"
-            />
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:text="Submit"
+                android:id="@+id/submitButton"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:background="@drawable/background_buttonn"
+                />
+
+            <ProgressBar
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:id="@+id/progressbar_sendotp"
+                android:visibility="gone"/>
+        </FrameLayout>
+
 
 
 
